--- a/desafios/desafio012/index.html
+++ b/desafios/desafio012/index.html
@@ -15,7 +15,7 @@
     <main>
         <section id="Principal01">
             <p>
-                Estou ficando <br>
+                Estou ficando cansado<br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
                 Mensagem curta e fria <br>
