--- a/exercicios/h.ex24/index.html
+++ b/exercicios/h.ex24/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+
+    <style>
+        iframe{
+            width: 300px;
+            height: 300px;
+            border: 5px solid blue;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframes</h1>
     <p>Acessando o site do 
     
-        <iframe src="https://www.youtube.com/watch?v=GWULnkTnapM&list=PLHz_AreHm4dkcVCk2Bn_fdVQ81Fkrh6WT" frameborder="0"></iframe>
-        
-    youtube</a> com iframe</p>
+        <iframe src="https://viniboy17.github.io/Projetos/Perfil%20de%20links%20sociais/index.html" frameborder="0">
+
+<a href="https://viniboy17.github.io/Projetos/Perfil%20de%20links%20sociais/index.html">viniboy</a>
+
+        </iframe>
+         com iframe</p>
 </body>
 </html>
