--- a/exercicios/h.ex025/index.html
+++ b/exercicios/h.ex025/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Meu primeiro Formulario</h1>
-    <form action="cadastro.php" autocomplete="off">
-        <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome"></p>
+    <form action="cadastro.php" autocomplete="off" method="post">
+        <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome" required minlength="5"></p>
         <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
