--- a/exercicios/h.ex025/formulario002.html
+++ b/exercicios/h.ex025/formulario002.html
@@ -16,7 +16,7 @@
             <label for="isen">Senha:</label> 
             <input type="password" name="sen" id="isen" required minlength="8" maxlength="15">
         </p>
-        <input type="submit" value="Enviar">
+        <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
 </html>
