--- a/exercicios/h.ex025/form003.html
+++ b/exercicios/h.ex025/form003.html
@@ -8,18 +8,19 @@
 <body>
     <h1>Teste de Formulario</h1>
     <form action="cadastro.php" method="get">
-        <p><label for="inome">Nome:</label> <input type="text" nome="nome" id="inome" required maxlength="30" placeholder="Nome Completo" autocomplete="name"></p>
+        <fieldset>
+            <legend>Formulario do aluno</legend>
+            <p><label for="inome">Nome:</label> <input type="text" nome="nome" id="inome" required maxlength="30" placeholder="Nome Completo" autocomplete="name"></p>
+            <p><label for="imedia">Média:</label> <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5" required></p>
+            <p><label for="imes">Periodo:</label> <input type="month" name="mes" id="imes"></p>
+            <p>Dia da Prova: <input type="date" name="dia" id="idia"></p>
+            <p>Horario da Prova <input type="time" name="hora" id="ihora"></p>
+        </fieldset>
 
-        <p><label for="imedia">Média:</label> <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5" required></p>
-
-        <p><label for="imes">Periodo:</label> <input type="month" name="mes" id="imes"></p>
-
-        <p>Dia da Prova: <input type="date" name="dia" id="idia"></p>
-
-        <p>Horario da Prova <input type="time" name="hora" id="ihora"></p>
-
-        <input type="submit" value="Enviar">
-        <input type="reset" value="Apagar">
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Apagar">
+        </p>
 
     </form>
 </body>
