--- a/exercicios/h.ex026/mq004/index.html
+++ b/exercicios/h.ex026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile First</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Medias Queries</h1>
+        <img  id="phone" src="imagens/icon-phone.png" alt="Acessando via Celular">
+        <img  id="tablet" src="imagens/icon-tablet.png" alt="Acessando via Tablet">
+        <img  id="print" src="imagens/icon-print.png" alt="Acessando via impressora">
+        <img  id="pc" src="imagens/icon-pc.png" alt="Acessando via Pc">
+        <img  id="tv" src="imagens/icon-tv.png" alt="Acessando via Tv">
+    </main>
 </body>
 </html>
