--- a/desafios/desafio014/index.html
+++ b/desafios/desafio014/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/media-querys.css">
     <title>Pagina de Login</title>
 </head>
@@ -19,8 +19,20 @@
             </div>
 
             <form action="login.php" method="post">
-                <div id="name"><label for="iemail">Email: </label> <input type="email" name="email" id="iemail" required></div>
-                <div id="pass"><label for="isenha">Senha:</label> <input type="password" name="senha" id="isenha" minlength="8" required></div>
+
+                
+                <div class="campo">
+                    <span class="material-symbols-outlined">mail</span>
+                    <input type="email" name="email" id="iemail" required placeholder="Digite o E-mail">
+                    <label for="iemail">Email: </label>
+                </div> 
+
+
+                <div class="campo">
+                    <span class="material-symbols-outlined">vpn_key</span> 
+                    <input type="password" name="senha" id="isenha" minlength="8" required placeholder="Digite sua Senha">
+                    <label for="isenha">Senha:</label>
+                </div>
 
                 <p><input type="submit" value="Entrar" id="entar"></p>
                 <p><input type="button" value="Esqueci a senha" id="esqueci"></p>
