usando flexbox na tela de login

--- a/desafios/desafio014 - Copia/index.html
+++ b/desafios/desafio014 - Copia/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <main>
-        <div id="imagem">
-        </div>
+        <div id="imagem"></div>
+
         <section id="login">
             
             <div id="formulario">
@@ -39,6 +39,7 @@
             </form>
 
         </section>
+        
     </main>
 </body>
 </html>
